Potential XSS in confirmation message

--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -78,7 +78,7 @@
                                 class: "dropdown-item text-danger",
                                 data: {
                                   turbo_method: :delete,
-                                  turbo_confirm: "Are you sure you want to delete '#{access_token.name}'? This action cannot be undone."
+                                  turbo_confirm: "Are you sure you want to delete '#{j access_token.name}'? This action cannot be undone."
                                 } %>
                   </li>
                 </ul>
