--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -3,9 +3,13 @@
 <div class="space-y-8">
   <%= render PageHeaderComponent.new(title: "New Feed") %>
 
-  <div class="ff-card">
-    <div class="ff-card__body">
-      <p class="ff-text">Feed creation form coming soon...</p>
-    </div>
+  <div class="max-w-3xl mx-auto">
+    <% if !active_access_tokens? %>
+      <%= render "blocked_no_tokens" %>
+    <% elsif @feed.url.present? %>
+      <%= render "form_expanded", feed: @feed, edit_mode: false %>
+    <% else %>
+      <%= render "form_collapsed" %>
+    <% end %>
   </div>
 </div>
